--- a/bibliography/bibliography.bib
+++ b/bibliography/bibliography.bib
@@ -1,8 +1,3 @@
-@misc{ref:linsen-simulation,
-    title = {Simulation einer Linse},
-    howpublished = {\url{https://phet.colorado.edu/sims/geometric-optics/geometric-optics_de.html}},
-    note = {Abgerufen, 25-10-2015 17:20}
-}
 @inproceedings{ref:sani,
     author={A. Balestrino and G. Marani and L. Sani}, 
     booktitle={Electronics, Circuits and Systems, 2001. ICECS 2001. The 8th IEEE International Conference on}, 
@@ -21,4 +16,12 @@
     year={1994},
     pages={145--148},
 }
-
+@misc{ref:TheComet93,
+  author = {Alex Murray (TheComet93)},
+  title = {Report for "mathematical laboratory", FHNW Windisch},
+  year = {2016},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  howpublished = {\url{https://github.com/thecomet93/mlab}},
+  commit = {master}
+}
