--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -8,16 +8,11 @@ preferrably  automatically  -- deduce this behaviour is crucial. Small errors in
 the identification process can lead to large deviations later on. Worse, it  can
 lead to unstable control loops.
 
-There  are  many  ways  to  measure  and  identify  a  system and there are many
-different  classes  of systems to be measured. In this report  we  will  confine
-ourselves to linear, time-invariant  (LTI)  systems  only. Additionally, we will
-also  confine ourselves to systems  that  \textbf{don't}  exhibit  overshoot  or
-undershoot.
-
-The focus of this report will be the comparison of two fairly similar methods of
-system   identification   proposed   by    L.    Sani\cite{ref:sani}    and   P.
-Hudzovic\cite{ref:hudzovic}.
-
+The focus of this report will be  the  identification  of  time-invariant  (LTI)
+systems that don't exhibit overshoot  or  undershoot.  specifically,  two fairly
+similar methods  of system identification proposed by L. Sani\cite{ref:sani} and
+P. Hudzovic\cite{ref:hudzovic} will be  analysed  and  compared  to one another.
+ 
 Furthermore,  an extension to both methods involving a least squares fit will be
 proposed,  allowing  the  results  of   both  methods  to  be  further  refined.
 
