--- a/mlab_bericht_alex_murray.tex
+++ b/mlab_bericht_alex_murray.tex
@@ -16,11 +16,16 @@
     \input{util/matlabcode}
     \input{sections/introduction}
     \input{sections/theory}
-    \input{sections/simulations}
-    \input{sections/results}
-    \input{sections/discussion}
+    \newpage\input{sections/simulations}
+    \newpage\input{sections/results}
+    \newpage\input{sections/discussion}
 
     \addcontentsline{toc}{section}{Literature}
-    \printbibliography
+    \newpage\printbibliography
+
+    \clearpage
+    \onecolumn
+    \appendix
+    \input{sections/appendix.tex}
 \end{document}
 
