--- a/sections/abstract.tex
+++ b/sections/abstract.tex
@@ -7,10 +7,12 @@ the derivation of a  real  world  system's  transfer  function can lead to large
 deviations  later  on. Worse, it can lead  to  unstable  control  loops.  It  is
 therefore crucial to create an accurate model.
 
-In this report, two elegant system identification techniques proposed by L. Sani
-and P. Hudzovic will be analysed  and  compared  to one another. Furthermore, an
-extension  to  both methods will be proposed using a least square fit,  allowing
-the obtained system to be further refined.
+In this report, two system  identification techniques proposed by L. Sani and P.
+Hudzovic will be analysed and compared to one another. It will be  shown  that a
+combination of L. Sani's characterisation and P.  Hudzovic's  transfer  function
+formula produces the most  accurate  results.  Furthermore, an extension to both
+methods will be proposed using a least square fit, allowing the obtained  system
+to be further refined.
 
 \end{adjustwidth}
 \end{abstract}
