--- a/sections/simulations.tex
+++ b/sections/simulations.tex
@@ -1,57 +1,41 @@
 \section{Simulations}
 
-A set  of  subroutines  required  to compute and evaluate the transfer functions
-outlined in this report are  located  in  the  folder  \textit{mfunctions}.  The
-folder must be appended to MATLAB's path:
+A comprehensive set of subroutines required to compute and evaluate the transfer
+functions    outlined    in    this    report    can     be     obtained    from
+GitHub\cite{ref:TheComet93}.
+
+The subroutines are located in the folder \textit{matlab/mfunctions}, along with
+various utility functions. The folder must be appended to MATLAB's path like so:
 
 \begin{lstlisting}
 addpath([pwd,'/mfunctions']);
 \end{lstlisting}
 
-
-\input{sections/simulations/image_import}
+This section provides a short overview  of  what  each  subroutine does and how.
 
 
 \subsubsection*{Pre-processing}
 
-Typically, the input data is never perfect. It might contain noise, it might not
-have equispaced time values.  For  instance, it might have been imported from an
-image, like so:
+Typically, the  input  data is never perfect. It might contain noise or it might
+not have equispaced time values. The function \textit{preprocess\_curve} returns
+equispaced time values and smooths the signal.
 
 \begin{lstlisting}
-% Load the step response of a heater directly
-% from an image plot. We have to manually
-% specify the offset and Y scale Ks.
-yoffset = 22;
-Ks = 37 - yoffset;
-decimation_factor = 10;
-[xr, yr, img] = import_curve_from_image('images/plant1.png', decimation_factor);
+% Smooth input data and generate equispaced
+% time vector
+[x, y] = preprocess_curve(xr, yr);
 \end{lstlisting}
 
-In order to achieve better  results,  the  data  must be smoothed and quantised.
-Note  that  at  the  time   of  writing  I  did  not  have  access  to  MATLAB's
-\textit{smooth()}  function,  so  I  had  to  write   my   own   implementation,
-\textit{sliding\_average()}.  It  is recommended  to  use  \textit{smooth()}  if
-possible.
-
-\begin{lstlisting}
-% The xdata vector is not monotonically
-% increasing with evenly spaced time samples.
-% It is very close to it though, so we can
-% approximate it with linspace.
-x = linspace(xr(1), xr(end), length(xr))';
-
-% Input data is quite noisy, smooth it with a
-% sliding average filter
-y = sliding_average(yr, 20));
-\end{lstlisting}
+This is achieved  by  using a combination of MATLAB's \textit{smooth()} function
+and a custom sliding average  function  to  smooth the beginning and ends of the
+signal.
 
 
 \subsubsection*{Characterising the curve}
 
-With the data prepared, it is  now  possible to calculate $T_u/T_g$ or $t_{10}$,
-$t_{50}$ and $t_{90}$, depending on what you  wish  to  do  next.  The  function
-\textit{normalise\_curve()}  can  handle  both   cases   for   you,   like   so:
+With the data prepared (preprocessed), it is now possible to calculate $T_u/T_g$
+or $t_{10}$, $t_{50}$, $t_{90}$, depending on  what  you  wish  to  do next. The
+function  \textit{normalise\_curve()}  can  handle  both cases for you, like so:
 
 \begin{lstlisting}
 % Characterises the curve, either using
@@ -59,6 +43,34 @@ $t_{50}$ and $t_{90}$, depending on what you  wish  to  do  next.  The  function
 [Tu, Tg] = characterise_curve(x, y);
 [t10, t50, t90] = characterise_curve(x, y);
 \end{lstlisting}
+
+Determining $T_u$, $T_g$ is achieved by calculating  the  derivative of the data
+to  find  the  point  of  inflection.  The maximum and minimum of the signal  is
+determined  by  taking  the  value  of  the  first  and  last  element  in  $y$.
+
+Determining  $t_{10}$,  $t_{50}$,  $t_{90}$  is  achieved   by   using  MATLAB's
+\textit{spline()} function for higher accuracy. In the case of noisy input data,
+if  the  spline fails, the fallback method is to simply find the nearest  point.
+The minimum and maximum of the input signal  is  again  determined  by using the
+first and last element in $y$.
+
+Because L. Sani's approach heavily relies  on  accurately  determining the start
+and  end  valuse  of  the input step response function, and it  was  found  that
+noisier input  signals  would  significantly  throw  off  correctly  determining
+$t_{10}$,  $t_{50}$,  $t_{90}$, it is possible to override the  default  min/max
+values by passing in a third argument:
+
+\begin{lstlisting}
+% Override Sani's min/max.
+ymax = 37;  % Step function stops at 37
+ymin = 15;  % Step function starts at 15
+[t10, t50, t90] = characterise_curve(x, y, [ymin, ymax]);
+\end{lstlisting}
+
+The third argument is only valid for L. Sani's method.
+
+In the case  of  noisy  signals, it is usually better to determine the beginning
+and end values of the step response function manually.
 
 
 \subsubsection*{Calculating T, r and n}
@@ -89,6 +101,10 @@ generating  the  lookup  curves  discussed in the theory section. This can  take
 about a minute. They are saved to  disk  and  loaded  again if available, so all
 subsequent calls will be fast.
 
+The  \textit{sani\_lookup()}  function  will  use  the   interpolation  formulae
+(equation  \ref{eq:sani_interpolation})   when   passing   $t_{10}$,   $t_{50}$,
+$t_{90}$.   All  other  combinations   will   have   to   use   lookup   curves.
+
 
 \subsubsection*{Calculating the Transfer Function}
 
@@ -100,6 +116,19 @@ will help  convert  those  three  constants into a continuous transfer function:
 % Calculating the transfer functions
 G_hudzovic = hudzovic_transfer_function(T, r, n);
 G_sani = sani_transfer_function(T, r, n);
+\end{lstlisting}
+
+Of  course,  if  the  parameters  $T$,  $r$   and   $n$  were  determined  using
+\textit{sani\_lookup()} then  the  function  \textit{sani\_transfer\_function()}
+must be used. The same is true for Hudzovic.
+
+Once the transfer function is obtained,  one can view the step response by using
+\textit{step()}:
+
+\begin{lstlisting}
+% Plot step response
+[g, t] = step(G_hudzovic);
+plot(t, g);
 \end{lstlisting}
 
 
@@ -116,8 +145,8 @@ G = hudzovic_transfer_function(T, r, order);
 \end{lstlisting}
 
 To  further  refine  the result, it is possible to perform a least squares curve
-fit on a result  obtained  by  P.  Hudzovic's method using the \textbf{original}
-(non-smoothed)    data.    This    can   be   achieved   with   the    functions
+fit  on  a  result  obtained  by  either  method  using   the  \textbf{original}
+(non-smoothed)   data.    This    can    be    achieved   with   the   functions
 \textit{hudzovic\_fit()} and \textit{sani\_fit()}.
 
 \begin{lstlisting}
@@ -147,4 +176,6 @@ is necessary to first call \textit{characterise\_curve()} on  the  smoothed data
 to retrieve the order. A nice  side  effect  of  doing this is it also gives you
 good starting values for $T$ and $r$. This  avoids  the  possibility  of falling
 into a local minimum while fitting the data.
+
+\input{sections/simulations/image_import}
 
