--- a/util/matlabcode.tex
+++ b/util/matlabcode.tex
@@ -1,4 +1,5 @@
 \lstset{language=Matlab,%
+    xleftmargin=0.5cm,%
     basicstyle=\smaller,%
     breaklines=true,%
     morekeywords={matlab2tikz},
