--- a/sections/discussion.tex
+++ b/sections/discussion.tex
@@ -11,10 +11,11 @@ of  $n$  and  this  is  true  for   noisy   and   non-noisy   input   functions.
 Of course,  by performing a least-square curve fit, an even more accurate result
 can be obtained.
 
-One factor  that was not considered was how many data points are required in the
-lookup curves to yield accurate results. The simulations in this  report used 50
-data  points.  It  would  be  worth investigating this further to see how higher
-resolution lookup curves affect the accuracy of each method.
+One factor that was not  considered  is how many data points are required in the
+lookup  curves  to yield accurate enough results. The simulations in this report
+used  50  data  points. It would be worth investigating this further to see  how
+higher resolution (or  lower  resolution)  lookup  curves affect the accuracy of
+each method.
 
 P.  Hudzovic's  characterisation method (by measuring $T_u/T_g$) isn't as robust
 as  L.  Sani's   characterisation   method  (by  measuring  $t_{10}$,  $t_{50}$,
