--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -8,10 +8,11 @@ preferrably  automatically  -- deduce this behaviour is crucial. Small errors in
 the identification process can lead to large deviations later on. Worse, it  can
 lead to unstable control loops.
 
-The focus of this report will be  the  identification  of  time-invariant  (LTI)
-systems that don't exhibit overshoot  or  undershoot.  specifically,  two fairly
-similar methods  of system identification proposed by L. Sani\cite{ref:sani} and
-P. Hudzovic\cite{ref:hudzovic} will be  analysed  and  compared  to one another.
+The focus of this  report  will  be  the  identification of time-invariant (LTI)
+systems that don't  exhibit  overshoot  or  undershoot. specifically, two fairly
+similar methods of system identification proposed by L.  Sani\cite{ref:sani} and
+P.  Hudzovic\cite{ref:hudzovic}  will be analysed and compared  to  one  another
+using MATLAB.
  
 Furthermore,  an extension to both methods involving a least squares fit will be
 proposed,  allowing  the  results  of   both  methods  to  be  further  refined.
