--- a/sections/results.tex
+++ b/sections/results.tex
@@ -1,8 +1,8 @@
 \section{Results}
 
-A number of  comparisons  and  evaluations were performed on the 6 methods using
-the MATLAB functions described above. The simulation code can similarly be found
-on GitHub\cite{ref:TheComet93} in the directory \textit{matlab/}.
+A number of comparisons and evaluations were performed  on  the  6 methods using
+the MATLAB functions described above. The simulation code can  also  be found on
+GitHub\cite{ref:TheComet93} in the directory \textit{matlab/}.
 
 \input{sections/results/accuracy_vs_order}
 \input{sections/results/accuracy_vs_noise}
