--- a/sections/results/accuracy_vs_order.tex
+++ b/sections/results/accuracy_vs_order.tex
@@ -35,12 +35,8 @@ The data portrayed in figure \ref{fig:error_order} shows these errors.
 
 \subsubsection*{Conclusions}
 
-A first observation to make is that the resulting  data  points  for  4th  order
-transfer    functions    correlate    with    the    data   seen   in    figures
-\ref{fig:hudzovic_vs_fit}    and    \ref{fig:sani_vs_fit}   for    0\%    noise.
-
-As expected, the fitted methods  yielded the most accurate results. The Sani fit
-appears  to be better than the Hudzovic fit.
+As expected, the fitted methods yield  the  most  accurate results. The Sani fit
+appears to be better than the Hudzovic fit.
 
 The  most  accurate  non-fitted  method  is  Hudzovic's   transfer  function  in
 combination with Sani's characterisation (orange curve).
