--- a/sections/theory.tex
+++ b/sections/theory.tex
@@ -39,10 +39,10 @@ input, and  corresponds to the Laplace transform of the impulse response $G(s)$.
     G(s) = \frac{Y(s)}{X(s)}
 \end{equation}
 
-So the task  is  simple:  In order to obtain $G(s)$, a signal in the form of the
-Dirac delta function must be applied to the input of an unknown system  and  its
-output  must be measured. Unfortunately, it is very hard  to  do  this  in  most
-practical cases, due to:
+In order  to  obtain  $G(s)$ from an unknown system, a signal in the form of the
+Dirac delta function  must  be applied to the input of the system and its output
+must  be  measured.  Unfortunately, it is very hard to do this in most practical
+cases, due to:
 
 \begin{enumerate}
     \item Difficulty of generating a Dirac delta function (infinite amplitude, zero time).
