Final FINAL report

--- a/sections/results/accuracy_vs_order.tex
+++ b/sections/results/accuracy_vs_order.tex
@@ -53,9 +53,10 @@ Sani's  method  for determining $r$, $T$, $n$ based on the input data  $t_{10}$,
 $t_{50}$, $t_{90}$ used  a  lookup  curve  instead  of  using  the interpolation
 formulae. The same simulation was performed again with the modified code.
 
-The result  can  be seen in figure \ref{fig:interpolation_vs_lookup}. The dashed
-purple  line  is  the same purple curve from figure  \ref{fig:error_order}.  The
-continuous purple line shows the result of the modification.
+The result can be seen in figure \ref{fig:interpolation_vs_lookup}.  The  purple
+line is the same  purple  curve  from  figure  \ref{fig:error_order}. The dashed
+purple line shows the result of the modification.
 
 It appears that by using lookup curves the resulting  transfer  function is less
 accurate than if interpolation formulae were used.
+
