--- a/sections/theory/model.tex
+++ b/sections/theory/model.tex
@@ -31,17 +31,17 @@ The  approach  proposed  by  P.  Hudzovic\cite{ref:hudzovic}  for  $T_k(r)$  is:
     \label{eq:hudzovic}
 \end{equation}
 
-where  the  constant  $r$ must be  confined  to  the  interval  $0  \le  r  \leq
+where  the  constant  $r$  must  be   confined  to  the  interval  $0  \le  r  <
 \frac{1}{n-1}$.
 
 The   approach   proposed   by   L.   Sani\cite{ref:sani}   for   $T_k(r)$   is:
 
 \begin{equation}
-    T_k(r) = T \cdot r^k
+    T_k(r) = T \cdot r^{k-1}
     \label{eq:sani}
 \end{equation}
 
-where the constant $r$ must be confined to the interval $0 \leq r \le 1$.
+where  the  constant $r$ must be confined to  the  interval  $0  \leq  r  <  1$.
 
 As  can  be  seen,  in both cases, the  problem  has  been  reduced  to  finding
 appropriate values for  $n$,  $T$  and  $r$  such  that  the  step  response  of
