--- a/versuche/kraftmesstechnik/preamble/packages.tex
+++ b/versuche/kraftmesstechnik/preamble/packages.tex
@@ -2,6 +2,7 @@
 \usepackage[T1]{fontenc}
 \usepackage{textcomp}
 \usepackage{booktabs,caption,fixltx2e}
+\usepackage{todonotes}
 \usepackage[flushleft]{threeparttable}
 \usepackage{float}
 \usepackage{amsmath}
