--- a/versuche/kraftmesstechnik/sections/arbeitsgrundlagen.tex
+++ b/versuche/kraftmesstechnik/sections/arbeitsgrundlagen.tex
@@ -1,2 +1,8 @@
 \section{Arbeitsgrundlagen}
 
+\begin{figure}
+    \centering
+    \includegraphics[width=.7\linewidth]{images/reibungskraefte.gif}
+    \caption{}
+\end{figure}
+
