--- a/versuche/kraftmesstechnik/sections/diskussion.tex
+++ b/versuche/kraftmesstechnik/sections/diskussion.tex
@@ -1,2 +1,8 @@
 \section{Resultate und Diskussion}
 
+\begin{figure}
+    \centering
+    \includegraphics[width=.7\linewidth]{images/haft_gleit_uebergang.gif}
+    \caption{}
+\end{figure}
+
