--- a/versuche/kraftmesstechnik/sections/durchfuehrung.tex
+++ b/versuche/kraftmesstechnik/sections/durchfuehrung.tex
@@ -58,6 +58,7 @@ zwei mal durchgef\"uhrt, ein mal von Alex und ein mal von Noah.
         \includegraphics[width=\linewidth]{images/kalibration_geschwindigkeit_alex}
         \caption{Die Zeit \"Uber eine Strecke von \SI{1}{\meter} wurde bei verschiedenen Potentiometereinstellungen mit einer Stoppuhr von Alex gemessen.}
     \end{subfigure}
+    \caption{}\label{fig:kalibration_geschwindigkeit}
 \end{figure}
 
 \todo{Skizze, der zeigt, wie der Messaufbau aussieht}
@@ -80,12 +81,57 @@ Materialien Teppich und Plastik dar.
 
 \begin{figure}[H]
     \centering
-    \begin{subfigure}{.5\textwidth}
+    \begin{subfigure}{.7\textwidth}
         \includegraphics[width=\linewidth]{images/teppich_const_geschwindigkeit}
         \caption{Die Gleitreibungskraft vom Teppich wurde bei konstanter Geschwindigkeit und verschiedenen Normalkr\"aften gemessen.}
+        \label{fig:teppich_const_geschwindigkeit}
     \end{subfigure}
-    \begin{subfigure}{.5\textwidth}
+    \begin{subfigure}{.7\textwidth}
         \includegraphics[width=\linewidth]{images/plastik_const_geschwindigkeit}
         \caption{Die Gleitreibungskraft vom Plastik wurde bei konstanter Geschwindigkeit und verschiedenen Normalkr\"aften gemessen.}
+        \label{fig:plastik_const_geschwindigkeit}
     \end{subfigure}
 \end{figure}
+
+\begin{figure}[H]
+    \centering
+    \begin{subfigure}{.7\textwidth}
+        \includegraphics[width=\linewidth]{images/teppich_const_gewicht}
+        \caption{Die Gleitreibungskraft vom Teppich wurde bei konstanter Geschwindigkeit und verschiedenen Normalkr\"aften gemessen.}
+        \label{fig:teppich_const_gewicht}
+    \end{subfigure}
+    \begin{subfigure}{.7\textwidth}
+        \includegraphics[width=\linewidth]{images/plastik_const_gewicht}
+        \caption{Die Gleitreibungskraft vom Plastik wurde bei konstanter Geschwindigkeit und verschiedenen Normalkr\"aften gemessen.}
+        \label{fig:plastik_const_gewicht}
+    \end{subfigure}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \begin{subfigure}{.7\textwidth}
+        \includegraphics[width=\linewidth]{images/teppich_haft_poti=0_4}
+        \caption{Die Gleitreibungskraft vom Teppich wurde bei konstanter Geschwindigkeit und verschiedenen Normalkr\"aften gemessen.}
+        \label{fig:teppich_haft_poti=0.4}
+    \end{subfigure}
+    \begin{subfigure}{.7\textwidth}
+        \includegraphics[width=\linewidth]{images/plastik_haft_poti=0_4}
+        \caption{Die Gleitreibungskraft vom Plastik wurde bei konstanter Geschwindigkeit und verschiedenen Normalkr\"aften gemessen.}
+        \label{fig:plastik_haft_poti=0.4}
+    \end{subfigure}
+\end{figure}
+
+\begin{figure}[H]
+    \centering
+    \begin{subfigure}{.7\textwidth}
+        \includegraphics[width=\linewidth]{images/teppich_haft_poti=3}
+        \caption{Die Gleitreibungskraft vom Teppich wurde bei konstanter Geschwindigkeit und verschiedenen Normalkr\"aften gemessen.}
+        \label{fig:teppich_haft_poti=3}
+    \end{subfigure}
+    \begin{subfigure}{.7\textwidth}
+        \includegraphics[width=\linewidth]{images/plastik_haft_poti=3}
+        \caption{Die Gleitreibungskraft vom Plastik wurde bei konstanter Geschwindigkeit und verschiedenen Normalkr\"aften gemessen.}
+        \label{fig:plastik_haft_poti=3}
+    \end{subfigure}
+\end{figure}
+
