Writing more stuff

--- a/versuche/kraftmesstechnik/sections/diskussion.tex
+++ b/versuche/kraftmesstechnik/sections/diskussion.tex
@@ -2,7 +2,7 @@
 
 \begin{figure}
     \centering
-    \includegraphics[width=.7\linewidth]{images/haft_gleit_uebergang.gif}
+    \includegraphics[width=.7\linewidth]{images/haft_gleit_uebergang}
     \caption{}
 \end{figure}
 
