--- a/versuche/kraftmesstechnik/sections/fehlerrechnung.tex
+++ b/versuche/kraftmesstechnik/sections/fehlerrechnung.tex
@@ -1,2 +1,15 @@
 \section{Fehlerrechnung}
 
+\subsection{Gleitreibungskraft}
+
+Die  Messpunkte  wurden  mit  der  Formel $m \cdot g=\micro_{gl}  \cdot  F_{gl}$
+gefittet, wobei $m$ die  Masse  des  Objektes  ist  (X-Achse)  und  $F_{gl}$ die
+Gleitreibungskraft,   die   vom  Messger\"at  direkt  abgelesen  werden  konnte.
+
+Der gefittete Gleitreibungskoeffizient $\micro_{gl}$ kann also berechnet werden:
+
+\begin{equation}
+    \micro_{gl} = \frac{m \cdot g}{F_{gl}}
+\end{equation}
+
+
