--- a/versuche/kraftmesstechnik/kraftmesstechnik.tex
+++ b/versuche/kraftmesstechnik/kraftmesstechnik.tex
@@ -12,6 +12,9 @@
     \include{sections/auswertung}
     \include{sections/fehlerrechnung}
     \include{sections/diskussion}
-%    \printbibliography
+    \printbibliography
+
+    \appendix
+    \includepdf[pages=-]{images/messungen_excel.pdf}
 \end{document}
 
