--- a/versuche/kraftmesstechnik/sections/arbeitsgrundlagen.tex
+++ b/versuche/kraftmesstechnik/sections/arbeitsgrundlagen.tex
@@ -32,12 +32,12 @@ entegengesetzte Richtung der Hangabtriebskraft $F_H$ wirkt.  Ist $F_R$ gr\"osser
 als $F_H$, dann bleibt  das  Objekt  stehen.  Ist  sie kleiner, dann rutscht das
 Objekt mit zunehmender Geschwindigkeit die Fl\"ache hinunter.
 
-Die Reibungskraft wird  unterteilt  in  eine \textit{Haftreibungskraft} $F_{H0}$
-und  eine \textit{Gleitreibungskraft} $F_{gl}$. Wenn das Objekt stillsteht, dann
-wirkt   eine   Reibungskraft,   der   genau   gleich   gross  ist  wie   die
-Hangabtriebskraft $F_H$,  die das Objekt stillh\"alt. Diese Kraft wirkt solange,
-bis sie gr\"osser wird als die Haftreibungskraft  $F_{H0}$.  Danach  beginnt das
-Objekt   zu   rutschen,   und   es  wirkt   die   Gleitreibungskraft   $F_{gl}$.
+Die Reibungskraft wird  unterteilt  in eine \textit{Grenthaftkraft} $F_{H0}$ und
+eine  \textit{Gleitreibungskraft} $F_{gl}$. Wenn  das  Objekt  stillsteht,  dann
+wirkt eine Reibungskraft, der  genau  gleich gross ist wie die Hangabtriebskraft
+$F_H$, die das Objekt stillh\"alt. Diese Kraft wirkt solange, bis sie  gr\"osser
+wird als die Grenzhaftkraft $F_{H0}$. Danach beginnt das Objekt zu rutschen, und
+es wirkt die Gleitreibungskraft $F_{gl}$.
 
 In der Abbildung \ref{fig:haft_gleit_uebergang} ist dieser Vorgang visualisiert.
 
