--- a/versuche/kraftmesstechnik/sections/auswertung.tex
+++ b/versuche/kraftmesstechnik/sections/auswertung.tex
@@ -60,16 +60,13 @@ zwei mal durchgef\"uhrt, ein mal von Alex und ein mal von Noah.
     \caption{}\label{fig:kalibration_geschwindigkeit}
 \end{figure}
 
-\todo{Skizze, der zeigt, wie der Messaufbau aussieht}
-
 
 \subsection{Gleitreibungskraft Fester K\"orper}
 
 Die  Gleitreibungskraft  $F_{gl}$  wurde  in  Funktion der Normalkraft  $N$  bei
 konstanter Geschwindigkeit im Bereich von einigen \SI{}{\centi\meter\per\second}
 gemessen. Die Unsicherheit der Messwerte wurde  aus  der  Schwankungsbreite  der
-Anzeige   bestummen,   welches   sich   ungef\"ahr   zu   \SI{50}{\milli\newton}
-herausstellte.
+Anzeige  bestummen, welches sich  ungef\"ahr  zu  \SI{50}{\gram}  herausstellte.
 
 Die  Messungen  wurden bei der Potentiometereinstellung=1 durchgef\"uhrt  (siehe
 Abbildung \ref{fig:kalibration_geschwindigkeit}).
@@ -92,10 +89,10 @@ Materialien Teppich und Plastik dar.
     \end{subfigure}
 \end{figure}
 
-Die  Gleitreibungskraft  $F_{gl}$  wurde  in  Funktion  der  Geschwindigkeit bei
-konstanter Normalkraft gemessen. f\"ur Normalkraft  bzw. die Gewichtskraft wurde
+Die  Gleitreibungskraft  $F_{gl}$  wurde  in Funktion  der  Geschwindigkeit  bei
+konstanter Normalkraft gemessen. f\"ur Normalkraft bzw. die Gewichtskraft  wurde
 \SI{4}{\kilo\gram}  gew\"ahlt.   Die   messresultate  sind  in  den  Abbildungen
-\ref{fig:teppich_const_gewicht}    (Teppich)   und   \ref{plastik_const_gewicht}
+\ref{fig:teppich_const_gewicht}  (Teppich)  und  \ref{fig:plastik_const_gewicht}
 (Plastik) zu sehen.
 
 \begin{figure}[H]
