--- a/versuche/kraftmesstechnik/preamble/packages.tex
+++ b/versuche/kraftmesstechnik/preamble/packages.tex
@@ -6,7 +6,7 @@
 \usepackage[flushleft]{threeparttable}
 \usepackage{float}
 \usepackage{amsmath}
-\usepackage[backend=bibtex,citestyle=verbose-ibid,bibstyle=numeric,sorting=nyt]{biblatex}
+\usepackage[backend=bibtex,bibstyle=numeric,sorting=nyt]{biblatex}
 \usepackage[toc,page]{appendix}
 \usepackage{siunitx}
 \usepackage{subcaption}
